# deepgram-test

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
scripts/: bootstrap.sh
src/: cli.py
src/audio/: input.py
src/audio_ingestion/: __init__.py
src/integrations/: __init__.py  deepgram_client.py
src/llm/: __init__.py
src/notion/: __init__.py
src/transcription/: __init__.py  models.py
src/utils/: __init__.py  config.py  logging.py
src/voice_action/: __init__.py
src/voice_action/utils/: __init__.py  config.py
tests/: __init__.py  test_audio_input.py  test_cli.py  test_config.py  test_deepgram_client.py
